--- a/src/patternfly/components/Table/table-nested.hbs
+++ b/src/patternfly/components/Table/table-nested.hbs
@@ -1,5 +1,5 @@
 {{#> table newcontext table--id=(concat table--id '-' table-nested--id) table--attribute=(concat table-nested--attribute ' id="' table--id '" aria-label="Nested table"') table--modifier="pf-m-compact pf-m-no-border-rows" table--IsGrid=true}}
-  {{#> table-thead}}
+  {{#> table-thead table--IsCompact=true}}
     {{#> table-tr}}
       {{#> table-th table-th--attribute='scope="col"' table-th--IsSortable=true}}Description{{/table-th}}
       {{#> table-th table-th--attribute='scope="col"'}}Date{{/table-th}}
@@ -7,7 +7,7 @@
       {{> table-cell-empty}}
     {{/table-tr}}
   {{/table-thead}}
-  {{#> table-tbody}}
+  {{#> table-tbody table--IsCompact=true}}
     {{#> table-tr table-tr--id="nested-tr1"}}
       {{#> table-th table-th--data-label="Description"}}Item one{{/table-th}}
       {{#> table-td table-td--data-label="Date"}}May 9, 2018{{/table-td}}
