fix(content): actually remove root, update content selector

--- a/src/patternfly/components/Content/content--element.hbs
+++ b/src/patternfly/components/Content/content--element.hbs
@@ -1,11 +1,12 @@
 <{{content--element--type}} class="{{#unless content--element--ExcludeClass}}{{pfv}}content--{{content--element--type}}{{/unless}}
   {{~#if content--element--IsEditorial}} pf-m-editorial{{/if}}
+  {{~#if content--element--IsPlain}} pf-m-plain{{/if}}
   {{~#if content--element--modifier}} {{content--element--modifier}}{{/if}}"
   {{#if content--element--attribute}}
     {{{content--element--attribute}}}
   {{/if}}>
   {{#if @partial-block}}
-    {{> @partial-block newcontext}}
+    {{> @partial-block content--element--IsPlain=reset}}
   {{/if}}
 {{#unlessIfEquals content--element--type "hr"}}
   </{{content--element--type}}>
